# megaparsec

./: .darcsboring  .gitignore  .ormolu  .travis.yml  404.html  AUTHORS.md  CHANGELOG.md  CHANGES  HACKING.md  LICENSE.md  README.md  cabal.project  default.nix  flake.nix  index.html  megaparsec.cabal  megaparsec.ebal  parsec.cabal  prologue.txt  shell.nix  stack.yaml  tutorials.html
.github/workflows/: ci.yaml
Text/: MegaParsec.hs  Megaparsec.hs  Parsec.hs
Text/MegaParsec/: ByteString.hs  Char.hs  Combinator.hs  Error.hs  Expr.hs  Language.hs  Perm.hs  Pos.hs  Prim.hs  String.hs  Text.hs  Token.hs
Text/MegaParsec/ByteString/: Lazy.hs
Text/MegaParsec/Text/: Lazy.hs
Text/Megaparsec/: Byte.hs  ByteString.hs  Char.hs  Class.hs  Combinator.hs  Common.hs  Debug.hs  Error.hs  Error.hs-boot  Expr.hs  Internal.hs  Internal.hs-boot  Language.hs  Lexer.hs  Perm.hs  Pos.hs  Prim.hs  ShowToken.hs  State.hs  Stream.hs  String.hs  Text.hs  Token.hs  Tutorial.hs  Unicode.hs
Text/Megaparsec/Byte/: Binary.hs  Lexer.hs
Text/Megaparsec/ByteString/: Lazy.hs
Text/Megaparsec/Char/: Lexer.hs
Text/Megaparsec/Error/: Builder.hs
Text/Megaparsec/Internal/: ParsecT.hs  TagMap.hs
Text/Megaparsec/Text/: Lazy.hs
Text/Parsec/: ByteString.hs  Char.hs  Combinator.hs  Error.hs  Expr.hs  Language.hs  LazyByteString.hs  Perm.hs  Pos.hs  Prim.hs  String.hs  Text.hs  Token.hs
Text/Parsec/ByteString/: Lazy.hs
Text/Parsec/Text/: Lazy.hs
Text/ParserCombinators/: Parsec.hs
Text/ParserCombinators/Parsec/: Char.hs  Combinator.hs  Error.hs  Expr.hs  Language.hs  Perm.hs  Pos.hs  Prim.hs  Token.hs
base-4-13-or-later/Text/Megaparsec/Internal/: Monad.hs
base-earlier-than-4-13/Text/Megaparsec/Internal/: Monad.hs
bench-memory/: Main.hs
bench-speed/: Main.hs
bench/memory/: Main.hs
bench/speed/: Main.hs
benchmarks/: Main.hs
css/: bootstrap.min.css  megaparsec.css
js/: put-anchors.js
megaparsec-tests/: LICENSE.md  README.md  megaparsec-tests.cabal
megaparsec-tests/src/Test/Hspec/Megaparsec/: AdHoc.hs
megaparsec-tests/tests/Text/: MegaparsecSpec.hs
megaparsec-tests/tests/Text/Megaparsec/: ByteSpec.hs  CharSpec.hs  DebugSpec.hs  ErrorSpec.hs  PosSpec.hs  StreamSpec.hs  UnicodeSpec.hs
megaparsec-tests/tests/Text/Megaparsec/Byte/: BinarySpec.hs  LexerSpec.hs
megaparsec-tests/tests/Text/Megaparsec/Char/: LexerSpec.hs
nix/nixpkgs/: default.nix
nix/patches/: dhall.patch  hledger-lib.patch  hspec-megaparsec.patch  idris.patch  mmark.patch  modern-uri.patch  parser-combinators-tests.patch  tomland.patch
old-tests/: Bugs.hs  Main.hs  Util.hs
old-tests/Bugs/: Bug2.hs  Bug35.hs  Bug39.hs  Bug6.hs  Bug9.hs
oldtests/: Main.hs  Util.hs
oldtests/Bugs/: Bug2.hs  Bug35.hs  Bug39.hs  Bug6.hs
parsers-bench/: README.md  parsers-bench.cabal
parsers-bench/ParsersBench/CSV/: Attoparsec.hs  Megaparsec.hs
parsers-bench/ParsersBench/Json/: Attoparsec.hs  Common.hs  Megaparsec.hs
parsers-bench/ParsersBench/Log/: Attoparsec.hs  Common.hs  Megaparsec.hs
parsers-bench/bench/memory/: Main.hs
parsers-bench/bench/speed/: Main.hs
parsers-bench/data/: csv-10.csv  csv-20.csv  csv-40.csv  csv-5.csv  json-10.json  json-20.json  json-40.json  json-5.json
test/: Bugs.hs  Main.hs  Tokens.hs
test/Bugs/: Bug6.hs  Bug9.hs
tests/: Char.hs  Combinator.hs  Error.hs  Expr.hs  Lexer.hs  Main.hs  Perm.hs  Pos.hs  Prim.hs  Spec.hs  Token.hs  Util.hs
tests/Control/Applicative/: CombinatorsSpec.hs  PermutationsSpec.hs
tests/Control/Monad/: CombinatorsSpec.hs
tests/Control/Monad/Combinators/: ExprSpec.hs
tests/Test/Hspec/: Megaparsec.hs
tests/Test/Hspec/Megaparsec/: AdHoc.hs
tests/Text/: MegaparsecSpec.hs
tests/Text/Megaparsec/: ByteSpec.hs  CharSpec.hs  CombinatorSpec.hs  DebugSpec.hs  ErrorSpec.hs  ExprSpec.hs  LexerSpec.hs  PermSpec.hs  PosSpec.hs  PrimSpec.hs  StreamSpec.hs  Types.hs
tests/Text/Megaparsec/Byte/: LexerSpec.hs
tests/Text/Megaparsec/Char/: LexerSpec.hs
tutorials/: custom-error-messages.html  fun-with-the-recovery-feature.html  indentation-sensitive-parsing.html  parsing-simple-imperative-language.html  switch-from-parsec-to-megaparsec.html  writing-a-fast-parser.html
