cabal-version:   2.4
name:            megaparsec
version:         9.6.1
license:         BSD-2-Clause
license-file:    LICENSE.md
maintainer:      Mark Karpov <markkarpov92@gmail.com>
author:
    Megaparsec contributors,
    Paolo Martini <paolo@nemail.it>,
    Daan Leijen <daan@microsoft.com>

tested-with:     ghc ==9.4.7 ghc ==9.6.3 ghc ==9.8.1
homepage:        https://github.com/mrkkrp/megaparsec
bug-reports:     https://github.com/mrkkrp/megaparsec/issues
synopsis:        Monadic parser combinators
description:
    This is an industrial-strength monadic parser combinator library.
    Megaparsec is a feature-rich package that tries to find a nice balance
    between speed, flexibility, and quality of parse errors.

category:        Parsing
build-type:      Simple
extra-doc-files:
    CHANGELOG.md
    README.md

source-repository head
    type:     git
    location: https://github.com/mrkkrp/megaparsec.git

flag dev
    description: Turn on development settings.
    default:     False
    manual:      True

library
    exposed-modules:
        Text.Megaparsec
        Text.Megaparsec.Byte
        Text.Megaparsec.Byte.Binary
        Text.Megaparsec.Byte.Lexer
        Text.Megaparsec.Char
        Text.Megaparsec.Char.Lexer
        Text.Megaparsec.Debug
        Text.Megaparsec.Error
        Text.Megaparsec.Error.Builder
        Text.Megaparsec.Internal
        Text.Megaparsec.Pos
        Text.Megaparsec.State
        Text.Megaparsec.Stream

    other-modules:
        Text.Megaparsec.Class
        Text.Megaparsec.Common
        Text.Megaparsec.Lexer

    default-language: Haskell2010
    build-depends:
        base >=4.15 && <5,
        bytestring >=0.2 && <0.13,
        case-insensitive >=1.2 && <1.3,
        containers >=0.5 && <0.8,
        deepseq >=1.3 && <1.6,
        mtl >=2.2.2 && <3,
        parser-combinators >=1.0 && <2,
        scientific >=0.3.7 && <0.4,
        text >=0.2 && <2.2,
        transformers >=0.4 && <0.7

    if flag(dev)
        ghc-options:
            -Wall -Werror -Wredundant-constraints -Wpartial-fields
            -Wunused-packages

    else
        ghc-options: -O2 -Wall

    if impl(ghc >=9.8)
        ghc-options: -Wno-x-partial

benchmark bench-speed
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   bench/speed
    default-language: Haskell2010
    build-depends:
        base >=4.15 && <5,
        bytestring >=0.2 && <0.13,
        containers >=0.5 && <0.8,
        criterion >=0.6.2.1 && <1.7,
        deepseq >=1.3 && <1.6,
        megaparsec,
        text >=0.2 && <2.2

    if flag(dev)
        ghc-options:
            -Wall -Werror -Wredundant-constraints -Wpartial-fields
            -Wunused-packages

    else
        ghc-options: -O2 -Wall

benchmark bench-memory
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   bench/memory
    default-language: Haskell2010
    build-depends:
        base >=4.15 && <5,
        bytestring >=0.2 && <0.13,
        containers >=0.5 && <0.8,
        deepseq >=1.3 && <1.6,
        megaparsec,
        text >=0.2 && <2.2,
        weigh >=0.0.4

    if flag(dev)
        ghc-options:
            -Wall -Werror -Wredundant-constraints -Wpartial-fields
            -Wunused-packages

    else
        ghc-options: -O2 -Wall
