cabal-version:   2.4
name:            megaparsec-tests
version:         9.2.2
license:         BSD-2-Clause
license-file:    LICENSE.md
maintainer:      Mark Karpov <markkarpov92@gmail.com>
author:          Megaparsec contributors
tested-with:     ghc ==9.0.2 ghc ==9.2.4 ghc ==9.4.1
homepage:        https://github.com/mrkkrp/megaparsec
bug-reports:     https://github.com/mrkkrp/megaparsec/issues
synopsis:        Test utilities and the test suite of Megaparsec
description:     Test utilities and the test suite of Megaparsec.
category:        Parsing
build-type:      Simple
extra-doc-files: README.md

flag dev
    description: Turn on development settings.
    default:     False
    manual:      True

library
    exposed-modules:  Test.Hspec.Megaparsec.AdHoc
    hs-source-dirs:   src
    default-language: Haskell2010
    build-depends:
        QuickCheck >=2.10 && <2.15,
        base >=4.15 && <5.0,
        bytestring >=0.2 && <0.12,
        containers >=0.5 && <0.7,
        hspec >=2.0 && <3.0,
        hspec-expectations >=0.8 && <0.9,
        hspec-megaparsec >=2.0 && <3.0,
        megaparsec ==9.2.2,
        mtl >=2.2.2 && <3.0,
        text >=0.2 && <2.1,
        transformers >=0.4 && <0.7

    if flag(dev)
        ghc-options:
            -Wall -Werror -Wcompat -Wincomplete-record-updates
            -Wincomplete-uni-patterns -Wnoncanonical-monad-instances

    else
        ghc-options: -O2 -Wall

test-suite tests
    type:               exitcode-stdio-1.0
    main-is:            Spec.hs
    build-tool-depends: hspec-discover:hspec-discover >=2.0 && <3.0
    hs-source-dirs:     tests
    other-modules:
        Text.Megaparsec.Byte.BinarySpec
        Text.Megaparsec.Byte.LexerSpec
        Text.Megaparsec.ByteSpec
        Text.Megaparsec.Char.LexerSpec
        Text.Megaparsec.CharSpec
        Text.Megaparsec.DebugSpec
        Text.Megaparsec.ErrorSpec
        Text.Megaparsec.PosSpec
        Text.Megaparsec.StreamSpec
        Text.MegaparsecSpec

    default-language:   Haskell2010
    build-depends:
        QuickCheck >=2.10 && <2.15,
        base >=4.15 && <5.0,
        bytestring >=0.2 && <0.12,
        case-insensitive >=1.2 && <1.3,
        containers >=0.5 && <0.7,
        hspec >=2.0 && <3.0,
        hspec-expectations >=0.8 && <0.9,
        hspec-megaparsec >=2.0 && <3.0,
        megaparsec ==9.2.2,
        megaparsec-tests,
        mtl >=2.2.2 && <3.0,
        parser-combinators >=1.0 && <2.0,
        scientific >=0.3.1 && <0.4,
        text >=0.2 && <2.1,
        transformers >=0.4 && <0.7

    if flag(dev)
        ghc-options: -O0 -Wall -Werror

    else
        ghc-options: -O2 -Wall
