cabal-version:   >=1.18
name:            parsers-bench
version:         0.1.0
license:         BSD3
maintainer:      Mark Karpov <markkarpov92@gmail.com>
author:          Mark Karpov <markkarpov92@gmail.com>
tested-with:     ghc ==9.8.4 ghc ==9.10.1 ghc ==9.12.1
homepage:        https://github.com/mrkkrp/megaparsec
bug-reports:     https://github.com/mrkkrp/megaparsec/issues
synopsis:        Performance benchmarks: Megaparsec vs Attoparsec
description:     Performance benchmarks: Megaparsec vs Attoparsec.
category:        Parsing, Benchmark
build-type:      Simple
extra-doc-files: README.md

source-repository head
    type:     git
    location: https://github.com/mrkkrp/parsers-bench.git

flag dev
    description: Turn on development settings.
    default:     False
    manual:      True

library
    exposed-modules:
        ParsersBench.CSV.Attoparsec
        ParsersBench.CSV.Megaparsec
        ParsersBench.Json.Attoparsec
        ParsersBench.Json.Common
        ParsersBench.Json.Megaparsec
        ParsersBench.Log.Attoparsec
        ParsersBench.Log.Common
        ParsersBench.Log.Megaparsec

    default-language: Haskell2010
    build-depends:
        base -any,
        attoparsec -any,
        bytestring -any,
        deepseq -any,
        megaparsec -any,
        parser-combinators -any,
        scientific -any,
        text -any,
        time -any,
        unordered-containers -any,
        vector -any

    if flag(dev)
        ghc-options: -Wall -Werror

    else
        ghc-options: -O2 -Wall

benchmark bench-speed
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   bench/speed
    default-language: Haskell2010
    build-depends:
        base -any,
        bytestring -any,
        criterion -any,
        deepseq -any,
        parsers-bench -any

    if flag(dev)
        ghc-options: -O2 -Wall -Werror

    else
        ghc-options: -O2 -Wall

benchmark bench-memory
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   bench/memory
    default-language: Haskell2010
    build-depends:
        base -any,
        bytestring -any,
        deepseq -any,
        parsers-bench -any,
        weigh -any

    if flag(dev)
        ghc-options: -O2 -Wall -Werror

    else
        ghc-options: -O2 -Wall
